--- a/projetweb/src/app/templates/base.html
+++ b/projetweb/src/app/templates/base.html
@@ -13,6 +13,7 @@
             <li><a href="/">Home</a></li>
             <li><a href="/about">About</a></li>
             <li><a href="/hello">Hello</a></li>
+            <li><a href="/assos">Assos</a></li>
         </ul>
     </nav>
     {% block content %}{% endblock %}
