--- a/projetweb/src/app/templates/assos.html
+++ b/projetweb/src/app/templates/assos.html
@@ -4,4 +4,25 @@
 
 {% block content %}
 <h1>Assos page</h1>
+
+<table class="table">
+    <thead>
+        <tr>
+            <th>ID</th>
+            <th>RNA ID</th>
+            <th>RNA ID EX</th>
+            <th>Gestion</th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for data in datas %}
+        <tr>
+            <td>{{ data.id }}</td>
+            <td>{{ data.rna_id }}</td>
+            <td>{{ data.rna_id_ex }}</td>
+            <td>{{ data.gestion }}</td>
+        </tr>
+        {% endfor %}
+    </tbody>
+</table>
 {% endblock %}
