Add adding, deleting, alter functionalities

--- a/projetweb/src/app/static/styles.css
+++ b/projetweb/src/app/static/styles.css
@@ -1,34 +1,20 @@
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-
-body {
-    font-family: Arial, Helvetica, sans-serif;
-    background: bisque;
-}
 
 .table {
     width: 80%;
     margin: 20px auto;
 }
 
-.table td, .table th {
-    border: 1px solid gray;
-    padding: 10px;
-}
 
 nav ul {
     display: flex;
     list-style: none;
-    background-color: burlywood;
+    background-color: rgb(1, 39, 106);
     justify-content: space-around;
 }
 
 nav a {
     text-decoration: none;
-    color: aquamarine;
+    color: rgb(255, 255, 255);
     display: block;
     padding: 10px;
 }
